# hpfp

./: .gitignore  conf.py  goals.rst  index.rst  main.hs  proj.hsfiles  readme.rst  readthedocs.yaml
01_-_all_you_need_is_lambda/: brief-outline.rst  notes.rst  notes2.rst  outline.rst  questions.rst  rojas.txt  vocab.rst
02_-_hello_haskell/: download_stack.bash  fetch_resources.bash  notes.rst  outline.rst
02_-_hello_haskell/figures/: learn.hs  (+3 more)
03_-_strings/: notes.rst  questions.rst
04_-_basic_datatypes/: notes.rst  questions.rst
05_-_types/: notes.rst  questions.rst  qutestions.rst
06_-_typeclasses/: notes.rst
07_-_more_functional_patterns/: notes.rst
08_-_recursion/: brief-outline.rst  chapter-text.rst  design-recipe.rst  notes.rst  objectives.rst  outline.rst  overkill.rst
09_-_lists/: brief-contents.rst  checklist.rst  contents.rst  exercises-checklist.rst  notes.rst  outline.rst  questions.rst  summary.rst
10_-_folds/: 10.7.cast  10.9.cast  Ms.hs  chapter-text.rst  checklist.rst  contents.rst  notes.rst  outline.rst  questions.rst
11_-_algebraic_datatypes/: notes.rst  outline.rst
12_-_signaling_adversity/: MkPersonV1.hs  notes.rst  speedrun.cast
13_-_building_projects/: notes.rst  outline.rst  questions.rst
13_-_building_projects/projects/hello/: hello.cabal
13_-_building_projects/projects/hello/src/: Hello.hs
14_-_testing/: notes.rst  outline.rst  questions.rst
14_-_testing/projects/addition/: Addition.hs  addition.cabal
14_-_testing/projects/morse/: morse.cabal  morse_project_setup.bash  stack.yaml
14_-_testing/projects/morse/src/: Morse.hs
14_-_testing/projects/morse/tests/: tests.hs
15_-_monoid_semigroup/: notes.rst
16_-_functor/: notes.rst  outline.rst
17_-_applicative/: appdoc.rst  notes.rst  outline.rst
18_-_monad/: BadMonad.hs  EitherMonad.hs  Exercises.hs  ExplodingCow.hs  MonadExample.hs  MonadsForFp.hs  TodoApp.hs  cheat-sheet.rst  notes.rst  outline.rst  summary.rst  why.rst
19_-_applying_structure/: notes.rst  outline.rst
20_-_foldable/: notes.rst  outline.rst
21_-_traversable/: notes.rst  outline.rst  questions.rst  quickcheck_notes.rst
22_-_reader/: notes.rst  outline.rst  questions.rst  scratch
(+889 files in other folders)
