name:                hello
version:             0.1.0.0
synopsis:            My awesome hello world package.
description:         Please see README.md
homepage:            https://github.com/kingparra/hpfp/blob/ch13-hello/13_-_building_projects/projects/hello/README.md
license:             BSD3
license-file:        LICENSE
author:              Chris King-Parra
maintainer:          chris@kingparra.work
copyright:           2021, Chris King-Parra
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hello
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:      src
  exposed-modules:     Hello
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
